--- a/class5/src/index.css
+++ b/class5/src/index.css
@@ -11,3 +11,10 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.globalClass{
+    background-color: gray;
+    color: lightgray;
+    padding: 20px;
+    border-radius: 10px;
+    text-align: center;
+}
